--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,10 +14,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.83.1'
+          hugo-version: "0.83.1"
           extended: true
+      - name: pwd
+        run: pwd
       - name: Build
-        run: hugo --minify
+        run: hugo --minify --destination ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
