--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,8 @@ jobs:
         run: pwd
       - name: Build
         run: hugo --minify --destination ./public
+      - name: ls
+        run: ls -alR /home/runner/work/ruhrkosmos.github.io/ruhrkosmos.github.io/public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
