--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,14 +16,10 @@ jobs:
         with:
           hugo-version: "0.83.1"
           extended: true
-      - name: pwd
-        run: pwd
       - name: Build
-        run: hugo --minify --destination ./public
-      - name: ls
-        run: ls -alR /home/runner/work/ruhrkosmos.github.io/ruhrkosmos.github.io/public
+        run: hugo --minify
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: /home/runner/work/ruhrkosmos.github.io/ruhrkosmos.github.io/public
+          publish_dir: ./public
