--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,8 @@ jobs:
           extended: true
       - name: Build
         run: hugo --minify
+      - name: Copy CNAME to published root
+        run: cp CNAME public/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
