--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,5 +13,5 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Draft", name: "draft", widget: "boolean" }
+      - { label: "Draft", name: "draft", widget: "boolean", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
